antlr/SimpleParser.py
# Generated from /home/Projects/antlr/Simple.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SimpleParser ( Parser ):

    grammarFileName = "Simple.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'public'", "'static'", "'void'", "'('", 
                     "')'", "'{'", "'}'", "';'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'+'", "'-'", "'/'", "'*'", "'&'", "'~'", "'^'", 
                     "'int'", "'byte'", "'string'", "'bool'", "'float'", 
                     "'double'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'for'", "'while'", "'if'", "'else'", 
                     "'&&'", "'||'", "'='", "'++'", "'--'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "BooleanLiteral", 
                      "IntegerLiteral", "StringLiteral", "FloatLiteral", 
                      "FOR", "WHILE", "IF", "ELSE", "AND", "OR", "ASSIGNMENT", 
                      "INC", "DEC", "WORD", "WHITESPACE", "NEWLINE" ]

    RULE_start = 0
    RULE_methodDeclarations = 1
    RULE_methodDeclaration = 2
    RULE_methodHeader = 3
    RULE_methodBody = 4
    RULE_statement = 5
    RULE_embeddedStatement = 6
    RULE_forStatement = 7
    RULE_relationalExpression = 8
    RULE_variable = 9
    RULE_forInitializer = 10
    RULE_forExpression = 11
    RULE_forIterator = 12
    RULE_forLoop = 13
    RULE_whileStatement = 14
    RULE_ifClause = 15
    RULE_ifClauses = 16
    RULE_ifStatement = 17
    RULE_expression = 18
    RULE_localVariableDeclaration = 19
    RULE_methodCall = 20
    RULE_assignment = 21
    RULE_operations = 22
    RULE_variableType = 23
    RULE_methodName = 24
    RULE_variableName = 25
    RULE_variableValue = 26

    ruleNames =  [ "start", "methodDeclarations", "methodDeclaration", "methodHeader", 
                   "methodBody", "statement", "embeddedStatement", "forStatement", 
                   "relationalExpression", "variable", "forInitializer", 
                   "forExpression", "forIterator", "forLoop", "whileStatement", 
                   "ifClause", "ifClauses", "ifStatement", "expression", 
                   "localVariableDeclaration", "methodCall", "assignment", 
                   "operations", "variableType", "methodName", "variableName", 
                   "variableValue" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    BooleanLiteral=27
    IntegerLiteral=28
    StringLiteral=29
    FloatLiteral=30
    FOR=31
    WHILE=32
    IF=33
    ELSE=34
    AND=35
    OR=36
    ASSIGNMENT=37
    INC=38
    DEC=39
    WORD=40
    WHITESPACE=41
    NEWLINE=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimpleParser.EOF, 0)

        def methodDeclarations(self):
            return self.getTypedRuleContext(SimpleParser.MethodDeclarationsContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = SimpleParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleParser.T__0:
                self.state = 54
                self.methodDeclarations()


            self.state = 57
            self.match(SimpleParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(SimpleParser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_methodDeclarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclarations" ):
                listener.enterMethodDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclarations" ):
                listener.exitMethodDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclarations" ):
                return visitor.visitMethodDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclarations(self):

        localctx = SimpleParser.MethodDeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_methodDeclarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.methodDeclaration()
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==SimpleParser.T__0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodHeader(self):
            return self.getTypedRuleContext(SimpleParser.MethodHeaderContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(SimpleParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = SimpleParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_methodDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.methodHeader()
            self.state = 65
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodHeaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodName(self):
            return self.getTypedRuleContext(SimpleParser.MethodNameContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_methodHeader

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodHeader" ):
                listener.enterMethodHeader(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodHeader" ):
                listener.exitMethodHeader(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodHeader" ):
                return visitor.visitMethodHeader(self)
            else:
                return visitor.visitChildren(self)




    def methodHeader(self):

        localctx = SimpleParser.MethodHeaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_methodHeader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SimpleParser.T__0)
            self.state = 68
            self.match(SimpleParser.T__1)
            self.state = 69
            self.match(SimpleParser.T__2)
            self.state = 70
            self.methodName()
            self.state = 71
            self.match(SimpleParser.T__3)
            self.state = 72
            self.match(SimpleParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.StatementContext)
            else:
                return self.getTypedRuleContext(SimpleParser.StatementContext,i)


        def getRuleIndex(self):
            return SimpleParser.RULE_methodBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodBody" ):
                listener.enterMethodBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodBody" ):
                listener.exitMethodBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodBody" ):
                return visitor.visitMethodBody(self)
            else:
                return visitor.visitChildren(self)




    def methodBody(self):

        localctx = SimpleParser.MethodBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(SimpleParser.T__5)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleParser.T__20) | (1 << SimpleParser.T__21) | (1 << SimpleParser.T__22) | (1 << SimpleParser.T__23) | (1 << SimpleParser.T__24) | (1 << SimpleParser.T__25) | (1 << SimpleParser.FOR) | (1 << SimpleParser.WHILE) | (1 << SimpleParser.IF) | (1 << SimpleParser.WORD))) != 0):
                self.state = 75
                self.statement()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(SimpleParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forStatement(self):
            return self.getTypedRuleContext(SimpleParser.ForStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SimpleParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SimpleParser.WhileStatementContext,0)


        def embeddedStatement(self):
            return self.getTypedRuleContext(SimpleParser.EmbeddedStatementContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SimpleParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        try:
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SimpleParser.FOR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.forStatement()
                pass
            elif token in [SimpleParser.IF]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.ifStatement()
                pass
            elif token in [SimpleParser.WHILE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.whileStatement()
                pass
            elif token in [SimpleParser.T__20, SimpleParser.T__21, SimpleParser.T__22, SimpleParser.T__23, SimpleParser.T__24, SimpleParser.T__25, SimpleParser.WORD]:
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.embeddedStatement()
                self.state = 87
                self.match(SimpleParser.T__7)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EmbeddedStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localVariableDeclaration(self):
            return self.getTypedRuleContext(SimpleParser.LocalVariableDeclarationContext,0)


        def methodCall(self):
            return self.getTypedRuleContext(SimpleParser.MethodCallContext,0)


        def assignment(self):
            return self.getTypedRuleContext(SimpleParser.AssignmentContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_embeddedStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEmbeddedStatement" ):
                listener.enterEmbeddedStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEmbeddedStatement" ):
                listener.exitEmbeddedStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmbeddedStatement" ):
                return visitor.visitEmbeddedStatement(self)
            else:
                return visitor.visitChildren(self)




    def embeddedStatement(self):

        localctx = SimpleParser.EmbeddedStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_embeddedStatement)
        try:
            self.state = 94
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.localVariableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.methodCall()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.assignment()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def forLoop(self):
            return self.getTypedRuleContext(SimpleParser.ForLoopContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)




    def forStatement(self):

        localctx = SimpleParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.forLoop()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleParser.RULE_relationalExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpression" ):
                listener.enterRelationalExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpression" ):
                listener.exitRelationalExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpression" ):
                return visitor.visitRelationalExpression(self)
            else:
                return visitor.visitChildren(self)




    def relationalExpression(self):

        localctx = SimpleParser.RelationalExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_relationalExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleParser.T__8) | (1 << SimpleParser.T__9) | (1 << SimpleParser.T__10) | (1 << SimpleParser.T__11) | (1 << SimpleParser.T__12))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableName(self):
            return self.getTypedRuleContext(SimpleParser.VariableNameContext,0)


        def variableValue(self):
            return self.getTypedRuleContext(SimpleParser.VariableValueContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_variable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariable" ):
                listener.enterVariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariable" ):
                listener.exitVariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable" ):
                return visitor.visitVariable(self)
            else:
                return visitor.visitChildren(self)




    def variable(self):

        localctx = SimpleParser.VariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_variable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 100
                self.variableName()
                pass

            elif la_ == 2:
                self.state = 101
                self.variableValue()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForInitializerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def localVariableDeclaration(self):
            return self.getTypedRuleContext(SimpleParser.LocalVariableDeclarationContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_forInitializer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForInitializer" ):
                listener.enterForInitializer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForInitializer" ):
                listener.exitForInitializer(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForInitializer" ):
                return visitor.visitForInitializer(self)
            else:
                return visitor.visitChildren(self)




    def forInitializer(self):

        localctx = SimpleParser.ForInitializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_forInitializer)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.localVariableDeclaration()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableName(self):
            return self.getTypedRuleContext(SimpleParser.VariableNameContext,0)


        def relationalExpression(self):
            return self.getTypedRuleContext(SimpleParser.RelationalExpressionContext,0)


        def variableValue(self):
            return self.getTypedRuleContext(SimpleParser.VariableValueContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_forExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForExpression" ):
                listener.enterForExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForExpression" ):
                listener.exitForExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForExpression" ):
                return visitor.visitForExpression(self)
            else:
                return visitor.visitChildren(self)




    def forExpression(self):

        localctx = SimpleParser.ForExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_forExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.variableName()
            self.state = 107
            self.relationalExpression()
            self.state = 108
            self.variableValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForIteratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableName(self):
            return self.getTypedRuleContext(SimpleParser.VariableNameContext,0)


        def INC(self):
            return self.getToken(SimpleParser.INC, 0)

        def DEC(self):
            return self.getToken(SimpleParser.DEC, 0)

        def getRuleIndex(self):
            return SimpleParser.RULE_forIterator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForIterator" ):
                listener.enterForIterator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForIterator" ):
                listener.exitForIterator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForIterator" ):
                return visitor.visitForIterator(self)
            else:
                return visitor.visitChildren(self)




    def forIterator(self):

        localctx = SimpleParser.ForIteratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_forIterator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not(_la==SimpleParser.INC or _la==SimpleParser.DEC):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 111
            self.variableName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForLoopContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SimpleParser.FOR, 0)

        def forInitializer(self):
            return self.getTypedRuleContext(SimpleParser.ForInitializerContext,0)


        def forExpression(self):
            return self.getTypedRuleContext(SimpleParser.ForExpressionContext,0)


        def forIterator(self):
            return self.getTypedRuleContext(SimpleParser.ForIteratorContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(SimpleParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_forLoop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForLoop" ):
                listener.enterForLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForLoop" ):
                listener.exitForLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForLoop" ):
                return visitor.visitForLoop(self)
            else:
                return visitor.visitChildren(self)




    def forLoop(self):

        localctx = SimpleParser.ForLoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_forLoop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(SimpleParser.FOR)
            self.state = 114
            self.match(SimpleParser.T__3)
            self.state = 115
            self.forInitializer()
            self.state = 116
            self.match(SimpleParser.T__7)
            self.state = 117
            self.forExpression()
            self.state = 118
            self.match(SimpleParser.T__7)
            self.state = 119
            self.forIterator()
            self.state = 120
            self.match(SimpleParser.T__4)
            self.state = 121
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SimpleParser.WHILE, 0)

        def ifClauses(self):
            return self.getTypedRuleContext(SimpleParser.IfClausesContext,0)


        def methodBody(self):
            return self.getTypedRuleContext(SimpleParser.MethodBodyContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = SimpleParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(SimpleParser.WHILE)
            self.state = 124
            self.match(SimpleParser.T__3)
            self.state = 125
            self.ifClauses()
            self.state = 126
            self.match(SimpleParser.T__4)
            self.state = 127
            self.methodBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.VariableContext)
            else:
                return self.getTypedRuleContext(SimpleParser.VariableContext,i)


        def relationalExpression(self):
            return self.getTypedRuleContext(SimpleParser.RelationalExpressionContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_ifClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfClause" ):
                listener.enterIfClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfClause" ):
                listener.exitIfClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfClause" ):
                return visitor.visitIfClause(self)
            else:
                return visitor.visitChildren(self)




    def ifClause(self):

        localctx = SimpleParser.IfClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_ifClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.variable()
            self.state = 130
            self.relationalExpression()
            self.state = 131
            self.variable()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfClausesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
